--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,9 @@
 # https://github.com/FabricMC/fabric-example-mod/blob/1.21/.github/workflows/build.yml
 
 name: build
-on: [pull_request, push]
+on: 
+  workflow_dispatch:
+
 
 jobs:
   build:
